Add count endpoint
