# lib/routes/property/{thingId}/{propertyName}.js
@@ -1,39 +1,25 @@
 'use strict'
 
-const { InsufficientPermissions } = require('../../../utils/http_errors')
+const { fixThingId } = require('../../../middlewares/fix_ids')
+const { checkPermissionsForProperty } = require('../../../middlewares/authz')
 
-async function execute (req, res) {
-  const permissions = await req.models.access.check({
-    resource: `${req.params.thingId}/properties/${req.params.propertyName}`,
-    token: req.kauth.grant.access_token.token,
-    scopes: ['GET']
-  })
-
-  if (permissions === undefined) {
-    throw new InsufficientPermissions()
-  }
-
-  // fix connctd ids
-  // todo: check if this is an security error
-  req.params.thingId = req.params.thingId.replace('uri:urn:', '')
-
-  req.queryInfluxDB(
-    req.params.thingId,
-    req.params.propertyName,
-    req.body.start || req.query.start,
-    req.body.stop || req.query.start
-  )
+function post (req, res) {
+  req.influxDB.query(req.params.thingId, req.params.propertyName, req.body)
 }
 
-async function post (req, res) {
-  await execute(req, res)
-}
-
-async function get (req, res) {
-  await execute(req, res)
+function get (req, res) {
+  req.influxDB.query(req.params.thingId, req.params.propertyName, req.query)
 }
 
 module.exports = {
-  post,
-  get
+  post: [
+    checkPermissionsForProperty,
+    fixThingId,
+    post
+  ],
+  get: [
+    checkPermissionsForProperty,
+    fixThingId,
+    get
+  ]
 }
